unpackaged/objects/rh2__PS_Describe__c.object
<CustomObject>
    <description>Manages Rollup Helper Visualforce data structures, Rollup Helper unit testing, and stores information on real-time rollups that require asynchronous processing.</description>
    <fields>
        <fullName>rh2__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Describes</relationshipLabel>
        <relationshipName>Describes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Asynchronous__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asynchronous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Contact2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Describes (Contact2)</relationshipLabel>
        <relationshipName>Describes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Contact3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Describes (Contact3)</relationshipLabel>
        <relationshipName>Describes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Describes</relationshipLabel>
        <relationshipName>Describes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Data_Type__c</fullName>
        <label>Last Record Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Disable_Realtime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Realtime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Foreign_Key_Test_Currency__c</fullName>
        <formula>rh2__Contact__r.rh2__Currency_Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Currency with Foreign Key</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Hierarchy_Test_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hierarchy Test 2</label>
        <referenceTo>rh2__PS_Describe__c</referenceTo>
        <relationshipLabel>Describes (Heirachy Test 2)</relationshipLabel>
        <relationshipName>Describes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Hierarchy_Test__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Hierarchy</label>
        <referenceTo>rh2__PS_Describe__c</referenceTo>
        <relationshipLabel>Describes</relationshipLabel>
        <relationshipName>Describes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rh2__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rh2__Real_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Real Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Rollup_10__c</fullName>
        <label>Rollup 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Rollup_11__c</fullName>
        <label>Rollup 11</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Rollup_12__c</fullName>
        <label>Rollup 12</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rh2__Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>zDeprecated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Sum_Integer_Double__c</fullName>
        <formula>rh2__Test_Integer__c +  rh2__Test_Double__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum Integer Double</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__Test_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Test Checkbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rh2__Test_Currency__c</fullName>
        <label>Test Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Test_Date_Time__c</fullName>
        <label>Test Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rh2__Test_Date__c</fullName>
        <description>Date field created for unit testing purposes.</description>
        <label>Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rh2__Test_Double__c</fullName>
        <label>Test Double</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__Test_End_Date__c</fullName>
        <label>Test End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rh2__Test_Formula_FK_Currency__c</fullName>
        <formula>rh2__Contact__r.rh2__Formula_Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Formula FK Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Test_Formula__c</fullName>
        <formula>1.00</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>rh2__Test_Integer2__c</fullName>
        <description>Used in validation rule exception test methods</description>
        <label>Test Integer2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__Test_Integer__c</fullName>
        <label>Test Integer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__Test_Long_Text__c</fullName>
        <label>Test_Long_Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rh2__Test_Multi_Picklist__c</fullName>
        <label>Test Multi-Picklist</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test 1</fullName>
                </value>
                <value>
                    <fullName>Test 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rh2__Test_Percent__c</fullName>
        <label>Test Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>rh2__Test_Picklist__c</fullName>
        <label>Test Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Test 1</fullName>
                </value>
                <value>
                    <fullName>Test 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rh2__Test_Rich_Text__c</fullName>
        <label>Test Rich Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rh2__Test_Small_Number__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Small Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rh2__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Describes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rh2__Validation_Test_Int__c</fullName>
        <description>Used in validation rule exception test methods</description>
        <label>Validation Test Int</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Describe</label>
    <listViews>
        <fullName>rh2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rh2__All_Objects</fullName>
        <columns>rh2__Label__c</columns>
        <columns>rh2__Object__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Objects</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Describe Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Describes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rh2__Block_Test_Int_Changes</fullName>
        <active>true</active>
        <description>Prevents the test integer field from being set to a value higher than 1 unless validation rule enforcement is toggled off.</description>
        <errorConditionFormula>rh2__Validation_Test_Int__c &gt; 1 &amp;&amp;   $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
        <errorDisplayField>rh2__Test_Integer__c</errorDisplayField>
        <errorMessage>You have been stopped from changing Test Integer by a validation rule.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rh2__Test_Rollup_Exception_Error_1</fullName>
        <active>true</active>
        <description>Test validation rule for PS_Error_Handler</description>
        <errorConditionFormula>rh2__Rollup_66__c = &apos;Test Second Error Test Second Error&apos;</errorConditionFormula>
        <errorDisplayField>rh2__Rollup_66__c</errorDisplayField>
        <errorMessage>Test error for PS_Error_Handler</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rh2__Test_Rollup_Exception_Error_2</fullName>
        <active>true</active>
        <description>Test validation rule for PS_Error_Handler</description>
        <errorConditionFormula>rh2__Rollup_64__c = &apos;Test Second Error Test Second Error&apos;</errorConditionFormula>
        <errorDisplayField>rh2__Rollup_64__c</errorDisplayField>
        <errorMessage>Test error for PS_Error_Handler Second</errorMessage>
    </validationRules>
</CustomObject>